--- a/catalog-entry.yaml
+++ b/catalog-entry.yaml
@@ -19,7 +19,8 @@ entries:
       - RAG
       - AI
       - LLM
-    git_url: "https://github.infra.cloudera.com/CAI/AmpRagStudio"
+    git_url: "https://github.com/cloudera/CML_AMP_RAG_Studio"
+    git_ref: "release/1"
     is_prototype: true
 
 
