--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^5.51.18",
     "@tanstack/react-router": "^1.47.1",
     "antd": "^5.19.4",
+    "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
