Start adding Python data source tests (#66)
Note that the only thing being mocked is calls to S3.

I'm explicitly passing through calls that LlamaIndex makes to Bedrock
(though this is [possible to
mock](http://docs.getmoto.org/en/latest/docs/services/patching_other_services.html)
if we know the response structure) and it's using the "real"
`databases/` subdirectory for Qdrant (though we could somewhat-easily
make that an env var).

---------

Co-authored-by: Elijah Williams <ewilliams@cloudera.com>
Co-authored-by: jwatson <jwatson@cloudera.com>

(cherry picked from commit 0cad4cca750f4e9851884da70b6d002c6ba9e0e7)

--- a/llm-service/app/requirements.txt
+++ b/llm-service/app/requirements.txt
@@ -7,3 +7,8 @@ boto3 == 1.34.26
 llama-index-embeddings-bedrock == 0.2.1
 llama-index-llms-bedrock == 0.1.13
 llama-index-vector-stores-qdrant == 0.2.17
+
+
+# test deps
+moto[s3]
+pytest
