--- a/llm-service/app/requirements.txt
+++ b/llm-service/app/requirements.txt
@@ -6,6 +6,8 @@ pydantic-settings == 2.3.4
 boto3 == 1.34.26
 llama-index-embeddings-bedrock == 0.2.1
 llama-index-llms-bedrock == 0.1.13
+llama-index-llms-openai == 0.1.31
+llama-index-embeddings-openai == 0.1.11
 llama-index-vector-stores-qdrant == 0.2.17
 
 
