update pr build action

--- a/.github/workflows/pr_build.yml
+++ b/.github/workflows/pr_build.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
+          cache-dependency-path: ui/pnpm-lock.yaml
 
       - name: Install UI Dependencies
         run: pnpm install --no-frozen-lockfile
