remove spec work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "python.analysis.extraPaths": ["./pybackend"]
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
