--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -34,6 +34,7 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: gradle
+          cache-dependency-path: backend/build.gradle.kts
 
       - name: Run Java backend tests
         run: ./gradlew test
