only release branch creates official releases

--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -79,7 +79,7 @@ jobs:
         id: create_release
         with:
           draft: false
-          prerelease: ${{ github.event.inputs.BRANCH == 'mob/main' }}
+          prerelease: ${{ github.event.inputs.BRANCH != 'release/1' }}
           name: ${{ github.event.inputs.VERSION }}
           tag_name: ${{ github.event.inputs.VERSION }}
           files: |
