--- a/.github/workflows/pr_build.yml
+++ b/.github/workflows/pr_build.yml
@@ -58,3 +58,21 @@ jobs:
         run: pnpm build
         working-directory: ui
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          cache: 'pip'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r app/requirements.txt
+        working-directory: llm-service
+
+      - name: Test with pytest
+        run: |
+          pip install pytest
+          pytest tests.py --doctest-modules --junitxml=junit/test-results.xml
+        working-directory: llm-service
+
