--- a/.github/workflows/pr_build.yml
+++ b/.github/workflows/pr_build.yml
@@ -63,6 +63,7 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip'
+          cache-dependency-path: 'llm-service/app/requirements.txt'
 
       - name: Install Python dependencies
         run: |
