--- a/llm-service/pyproject.toml
+++ b/llm-service/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "llama-index-embeddings-openai==0.1.11",
     "llama-index-vector-stores-qdrant==0.2.17",
     "docx2txt>=0.8",
-    "pandas>=2.2.3"
+    "pandas>=2.2.3",
+    "fastapi-utils>=0.8.0"
 ]
 requires-python = "==3.10.*"
 readme = "README.md"
