--- a/llm-service/pyproject.toml
+++ b/llm-service/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "llm-service"
 version = "0.1.0"
-description = "Default template for PDM package"
+description = "Default template for UV package"
 authors = [
     {name = "Conrado Silva Miranda", email = "csilvamiranda@cloudera.com"},
 ]
@@ -11,7 +11,7 @@ dependencies = [
     "fastapi==0.111.0",
     "pydantic==2.8.2",
     "pydantic-settings==2.3.4",
-    "boto3>=1.35.66",
+    "boto3>=1.35.68",
     "llama-index-embeddings-bedrock==0.2.1",
     "llama-index-llms-bedrock==0.1.13",
     "llama-index-llms-openai==0.1.31",
