--- a/llm-service/pyproject.toml
+++ b/llm-service/pyproject.toml
@@ -21,6 +21,11 @@ dependencies = [
     "docx2txt>=0.8",
     "pandas>=2.2.3",
     "fastapi-utils>=0.8.0",
+    "umap-learn>=0.5.7",
+    "python-pptx>=1.0.2",
+    "torch>=2.5.1",
+    "pillow>=10.4.0",
+    "transformers>=4.46.3",
     "docling>=2.7.0",
 ]
 requires-python = "==3.10.*"
